# vc-agent-marketplace

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_agent.py  run_server.py
a2a_marketplace/: main.py  pyproject.toml
a2a_marketplace/agents/: base_a2a_agent.py  startup_a2a_agent.py  vc_a2a_agent.py
a2a_marketplace/agents/profiles/: ai_ml_startup.json  cleantech_startup.json
a2a_marketplace/dashboard/: app.js  index.html  styles.css
a2a_marketplace/models/: types.py
a2a_marketplace/orchestrator/: a2a_client.py  deal_flow.py  event_bus.py  matcher.py  server.py
agents/: base.py  llm_client.py  startup_agent.py  vc_agent.py
agents/profiles/: early_stage_vc.json  fintech_startup.json  growth_stage_vc.json  healthtech_startup.json
bridges/: README.md  setup_ngrok.sh  telegram_bridge.py
dashboard/: app.js  hero.html  index.html  styles.css
docs/: PROTOCOL.md
examples/: curl_test.sh  node_client.js  python_client.py
marketplace/: database.py  deal_manager.py  event_bus.py  matcher.py  registry.py  router.py  server.py
models/: agent_models.py  deal_models.py  enums.py  message_models.py
